@@ -20,7 +20,7 @@ oncoplot(
   exprsTbl = NULL,
   additionalFeature = NULL,
   additionalFeaturePch = 20,
-  additionalFeatureCol = "white",
+  additionalFeatureCol = "gray70",
   additionalFeatureCex = 0.9,
   annotationDat = NULL,
   annotationColor = NULL,
@@ -83,11 +83,11 @@ oncoplot(
 
 \item{exprsTbl}{Expression values if availble. Must be a data.frame with two columns containing to gene names and expression values.}
 
-\item{additionalFeature}{a vector of length two indicating column name in the MAF and the factor level to be highlighted.}
+\item{additionalFeature}{a vector of length two indicating column name in the MAF and the factor level to be highlighted. Provide a list of values for highlighting more than one features}
 
 \item{additionalFeaturePch}{Default 20}
 
-\item{additionalFeatureCol}{Default "white"}
+\item{additionalFeatureCol}{Default "gray70"}
 
 \item{additionalFeatureCex}{Default 0.9}
 
